# obozrenie-rs

./: .gitignore  Cargo.toml  build.rs
res/: resources.xml
res/settings/internal/: games.toml
res/ui/: app.ui
src/: filters.rs  main.rs  rigsofrods.rs  static_resources.rs  treemodel.rs  widgets.rs
src/games/: flatpak.rs  mod.rs  openttd.rs  quake.rs  rgs.rs  rgs_support.rs  rigsofrods.rs
