[package]
name = "obozrenie"
version = "0.1.0"
build = "build.rs"

[dependencies]
enum-iter = { git = "https://github.com/vorot93/enum-iter" }
env_logger = "*"
failure = "*"
futures = "*"
futures-timer = "*"
gio = "*"
glib = "*"
gdk = "*"
gdk-pixbuf = "*"
gtk = { version = "*", features = ["v3_22"] }
log = "*"
regex = "*"
rgs = { git = "https://github.com/vorot93/rgs" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = "*"
tokio-core = "*"
tokio-ping = { git = "https://github.com/knsd/tokio-ping" }
