[package]
name = "obozrenie"
version = "0.1.0"
build = "build.rs"

[dependencies]
derive_more = "*"
enum-iter = { git = "https://github.com/vorot93/enum-iter" }
env_logger = "*"
failure = "*"
futures = "*"
futures-await = "0.1"
futures-timer = "*"
gio = "*"
glib = "*"
gdk = "*"
gdk-pixbuf = "*"
gtk = { version = "*", features = ["v3_22"] }
log = "*"
regex = "*"
reqwest = { git = "https://github.com/seanmonstar/reqwest" }
rgs = { git = "https://github.com/vorot93/rgs" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = "*"
tokio-core = "*"
tokio-dns-unofficial = "0.3.0"
tokio-ping = { git = "https://github.com/knsd/tokio-ping" }
