[package]
name = "obozrenie"
version = "0.1.0"
build = "build.rs"
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/vorot93/obozrenie-rs"
description = """
Simple and easy to use game server browser.
"""

[dependencies]
derive_more = "*"
enum-iter = { git = "https://github.com/vorot93/enum-iter" }
env_logger = "*"
failure = "*"
futures01 = { package = "futures", version = "0.1" }
futures-preview = { version = "0.3.0-alpha.17", features = ["compat"] }
gen-stream = "*"
gio = "*"
glib = "*"
gdk = "*"
gdk-pixbuf = "*"
gtk = { version = "*", features = ["v3_24"] }
log = "*"
regex = "*"
reqwest = "*"
rgs = { git = "https://github.com/vorot93/rgs" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = "*"
tokio-core = "*"
tokio-dns-unofficial = "*"
tokio-ping = { git = "https://github.com/knsd/tokio-ping" }
